--- a/Experiment 1 (Portfolio)/biolinks.html
+++ b/Experiment 1 (Portfolio)/biolinks.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Bio Links</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bio - My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Bio Links</h1>
-    </header>
-    <section>
-        <h2>Find Me Online</h2>
-        <ul>
-            <li><a href="www.linkedin.com/in/mukeshch77">LinkedIn</a></li>
-            <li><a href="https://github.com/mukeshch77">GitHub</a></li>
-        </ul>
-    </section>
+    <div class="container">
+        <nav class="left-sidebar">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="index.html" class="home-button">Home</a></li>
+                <li><a href="biolinks.html">Bio</a></li>
+                <li><a href="grades.html">Grade</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </nav>
+
+        <div class="content">
+            <header>
+                <h1>About Me</h1>
+            </header>
+
+            <section>
+                <p>I'm Software Developer from India, I build websites with a focus on HTML CSS & JavaScript considering all the aspects of UI/UX . I enjoy turning complex problems into simple, beautiful and intuitive designs.
+                    I focus on creating seamless, user-friendly experiences. With a creative eye and a problem-solving mindset, I bring ideas to life on the web. with some nice designing skills.
+                    I am a well-trained teammate who loves to share ideas and prioritizes communication in order to achieve goals within the set deadlines. I enjoy being challenged and working on projects that require me to step outside of my comfort zone.</p>
+                <div class="social-links">
+                    <a href="https://github.com/mukeshch77" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/mukeshch77/" target="_blank">LinkedIn</a>
+                </div>
+            </section>
+
+            <footer>
+                <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
