--- a/Experiment 1 (Portfolio)/grades.html
+++ b/Experiment 1 (Portfolio)/grades.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Grades</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grade - My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Grades</h1>
-    </header>
-    <section>
-        <table width="80%" border="1" cellpadding="10" cellspacing="0" align="center">
-            <tr>
-                <th>Class</th>
-                <th>Grade</th>
-                <th>Institute</th>
-                <th>Place</th>
-            </tr>
-            <tr>
-                <td>10th</td>
-                <td>64.83%</td>
-                <td>Pioneer Acadmy School</td>
-                <td>Jaipur</td>
+    <div class="container">
+        <nav class="left-sidebar">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="index.html" class="home-button">Home</a></li>
+                <li><a href="biolinks.html">Bio</a></li>
+                <li><a href="grades.html">Grade</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </nav>
 
-            </tr>
-            <tr>
-                <td>12th</td>
-                <td>69%</td>
-                <td>Pioneer Acadmy School</td>
-                <td>Jaipur</td>
-            </tr>
-            <tr>
-                <td>Graduation</td>
-                <td>73.3%</td>
-                <td>Rajasthan University</td>
-                <td>Jaipur</td>
-            </tr>
-        </table>
-    </section>
+        <div class="content">
+            <header>
+                <h1>My Grades</h1>
+            </header>
+
+            <section>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Class</th>
+                            <th>Grade</th>
+                             <th>Institute</th>
+                             <th>Place</th>
+                            </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>10th</td>
+                            <td>64.83%</td>
+                            <td>Pioneer Acadmy School</td>
+                            <td>Jaipur</td>
+                        </tr>
+                        <tr>
+                            <td>12th</td>
+                            <td>69%</td>
+                            <td>Pioneer Acadmy School</td>
+                            <td>Jaipur</td>
+                        </tr>
+                        <tr>
+                            <td>Graduation</td>
+                            <td>73.3%</td>
+                            <td>Rajasthan University</td>
+                            <td>Jaipur</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+
+            <footer>
+                <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
